--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,8 @@
     "react"
   ],
   "rules": {
-    "no-console": 0,
+    "no-debugger": 1,
+    "no-console": 1,
     "indent": [
       2,
       2
