--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-cli": "^6.5.1",
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.3",
+    "babel-plugin-lodash": "^2.1.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.5.2",
@@ -29,6 +30,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-sequence": "^0.4.5",
     "gulp-util": "^3.0.7",
+    "imagemin": "^4.0.0",
     "jade": "^1.11.0",
     "mkdirp": "^0.5.1",
     "rimraf": "^2.5.2",
