--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "personal site",
   "repository": "git@github.com:sodiumjoe/beverlymoon.com.git",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "gulp dev"
   },
   "author": "Joe Moon <joe@xoxomoon.com>",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.5.2",
+    "clean-css": "^3.4.10",
     "eslint": "^2.2.0",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^4.1.0",
@@ -32,13 +34,18 @@
     "gulp-util": "^3.0.7",
     "imagemin": "^4.0.0",
     "jade": "^1.11.0",
+    "less-plugin-autoprefix": "^1.5.1",
+    "less-plugin-clean-css": "^1.5.1",
     "mkdirp": "^0.5.1",
     "rimraf": "^2.5.2",
     "webpack": "^1.12.14"
   },
   "dependencies": {
+    "classnames": "^2.2.3",
+    "flexboxgrid": "^6.3.0",
     "gulp": "^3.9.1",
     "lodash": "^4.5.1",
+    "normalize.css": "^3.0.3",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.0"
