--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.5.2",
     "clean-css": "^3.4.10",
+    "css-loader": "^0.23.1",
     "eslint": "^2.2.0",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^4.1.0",
@@ -34,11 +35,15 @@
     "gulp-util": "^3.0.7",
     "imagemin": "^4.0.0",
     "jade": "^1.11.0",
+    "less-loader": "^2.2.3",
     "less-plugin-autoprefix": "^1.5.1",
     "less-plugin-clean-css": "^1.5.1",
     "mkdirp": "^0.5.1",
     "rimraf": "^2.5.2",
-    "webpack": "^1.12.14"
+    "style-loader": "^0.13.1",
+    "webpack": "^1.12.14",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
     "classnames": "^2.2.3",
