--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "normalize.css": "^3.0.3",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-router": "^2.0.0"
+    "react-router": "^2.0.0",
+    "scroll-behavior": "^0.3.4"
   }
 }
