--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "eslint": "^2.2.0",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^4.1.0",
-    "express": "^4.13.4",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-image-optimization": "^0.1.3",
     "gulp-jade": "^1.1.0",
@@ -48,11 +47,11 @@
   },
   "dependencies": {
     "classnames": "^2.2.3",
-    "flexboxgrid": "^6.3.0",
     "gulp": "^3.9.1",
     "lodash": "^4.5.1",
     "normalize.css": "^3.0.3",
     "react": "^0.14.7",
+    "react-addons-css-transition-group": "^0.14.8",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.0",
     "scroll-behavior": "^0.3.4"
