password protect portfolio

--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
   ],
   "rules": {
     "react/no-danger": 0,
+    "react/display-name": 0,
     "no-debugger": 1,
     "no-console": 0,
     "indent": [
