--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-addons-css-transition-group": "^0.14.8",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.0",
-    "scroll-behavior": "^0.3.4"
+    "scroll-behavior": "^0.3.4",
+    "sha.js": "^2.4.9"
   }
 }
